added lazy loading

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<div class="grid"></div>
+		<script src="./lazy-loader.js"></script> 
 		<script src="./data-loader.js"></script> 
 		<script src="./linked-list.js"></script> 
 		<script src="./animate.js"></script> 
