refactored services and directory structure

--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,12 @@
 	</head>
 	<body>
 		<div class="grid"></div>
-		<script src="./lazy-loader.js"></script> 
-		<script src="./data-loader.js"></script> 
-		<script src="./linked-list.js"></script> 
-		<script src="./animate.js"></script> 
+		<script src="./services/event-handler.js"></script> 
+		<script src="./services/lazy-loader.js"></script> 
+		<script src="./services/data-loader.js"></script> 
+		<script src="./services/linked-list.js"></script> 
+		<script src="./services/animate.js"></script>
+		<script src="./services/grid.js"></script> 
 		<script src="./app.js"></script> 
 	</body>
 </html>
